--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover,h6 a:hover{color:#0078CF;
 /* -- GRID  https://github.com/mattberridge/Proportional-Grids/
 ------------------------------------------------------------- */
 body{width:100%; background: url(../img/stripes.png) no-repeat 40% 0;}
-.container {width: 90%; margin: 5em auto; max-width: 1100px; min-width: 300px;}
+.container {width: 90%; margin-top: 1em; margin-left: 5em;/*margin: 5em auto*/; max-width: 1100px; min-width: 300px;}
  
 .grid-wrap {
   margin-left: -3em; /* the same as your gutter */
@@ -236,7 +236,7 @@ body{width:100%; background: url(../img/stripes.png) no-repeat 40% 0;}
 .col-one-quarter {width: 25%; }
 .col-three-quarters {width: 75%; }
 
-.divide-top{border-top: 1px solid #ccc;padding-top: 2em;margin-top: 1.5em; }
+.divide-top{border-top: 1px solid #ccc;/*padding-top: 2em;*//*margin-top: 1.5em;*/ }
 
 .mright{ margin-right: 3em;}
 .mleft{ margin-left: 3em;}
@@ -282,11 +282,11 @@ a img:hover {
     
 /* -- HEADER
 ------------------------------------------------------------- */
-header#navtop { margin-bottom: 2em; clear: both; overflow: hidden; }
-    header nav ul { float: left; overflow: hidden; padding: 0 3em 0 2em; border-left: 1px solid #ddd; line-height: 2em; }
+header#navtop { /*margin-bottom: 2em*/; clear: both; overflow: hidden; }
+    header nav ul { float: left; overflow: hidden; margin-top: 2em; padding: 0 3em 0 2em; border-left: 1px solid #ddd; line-height: 2em; }
 nav a, menu a { text-decoration: none; color: #555; }
 .navactive { color: #0078CF }
-.logo {margin-bottom: 3em; }
+.logo {/*margin-bottom: 3em;*/ }
 .logo:hover {background: none; text-decoration: none;}
 #nameheader { color:#555; font-size: 5em; }
 		
