--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover,h6 a:hover{color:#0078CF;
 /* -- GRID  https://github.com/mattberridge/Proportional-Grids/
 ------------------------------------------------------------- */
 body{width:100%; background: url(../img/stripes.png) no-repeat 40% 0;}
-.container {width: 90%; margin-top: 1em; margin-left: 5em;/*margin: 5em auto*/; max-width: 1100px; min-width: 300px;}
+.container {width: 90%; margin-top: 1em; margin-left: 5em; margin-right: 5em;/*margin: 5em auto*/; max-width: 1100px; min-width: 300px;}
  
 .grid-wrap {
   margin-left: -3em; /* the same as your gutter */
@@ -288,7 +288,7 @@ nav a, menu a { text-decoration: none; color: #555; }
 .navactive { color: #0078CF }
 .logo {/*margin-bottom: 3em;*/ }
 .logo:hover {background: none; text-decoration: none;}
-#nameheader { color:#555; font-size: 5em; }
+#nameheader { float: left; color:#555; font-size: 5em; }
 		
 		
 /* -- GENERAL 
