--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 /* -------------------------------------------------------------
-- Site Name: DESIGNA Studio
-- Version: 2.01 (August 2012)
-- Site URI: http://sylvainlafitte.com/designa/
-- Author: Sylvain Lafitte
-- Author URI: http://sylvainlafitte.com
+- Site Name: Colin Gerber
+- Version: 1.0 (04/10/2014)
+- Site URI: http://www.colingerber.com;
+- Author: Colin Gerber
 
 - Resources:
 	HTML5 Boilerplate (http://html5boilerplate.com/),
