--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,19 @@ footer li:last-child { margin-right: 0; padding-right: 0; border-right: none; }
 ------------------------------------------------------------- */
 /* About Me */
 .aboutme {font-size: 1.2em;}
+#personalpic { float: left; margin-right: 1em; margin-bottom: 1em;}
+.roundedimg {
+    display: inline-block;
+    /*border: solid 1px #000;*/
+    overflow: hidden;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+}
+
 
 /* Services */
 .services aside { color: #999; padding-top: 1em; border-top: 1px solid #DDD;}
