--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 - Resources:
 	HTML5 Boilerplate (http://html5boilerplate.com/),
-	Normalise.css (http://necolas.github.com/normalize.css/), 
+	Normalise.css (http://necolas.github.com/normalize.css/),
 	Proportional grids by Boon (http://builtbyboon.com),
 	CSS Tricks (css-tricks.com).
 ------------------------------------------------------------- */
@@ -70,7 +70,7 @@ ul.social-buttons li a.zocial-linkedin {
 /* -------------------------------------------------------------
 ======	RESET
 ------------------------------------------------------------- */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {display: block}
 audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 audio:not([controls]) { display: none; }
@@ -81,7 +81,7 @@ html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 10
 html, button, input, select, textarea {
 	font-family: "Open sans", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
 	font-weight: 400; /* normal */
-	color: #555; 
+	color: #555;
 	font-smooth:always;
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
@@ -93,10 +93,10 @@ a { color: #0078CF; font-weight: normal;
 	cursor: pointer;  text-decoration: none;
 	transition:color 0.2s ease; -moz-transition:color 0.2s ease; -webkit-transition:color 0.2s ease; -o-transition:color 0.2s ease;}
 
-a:hover { color: #000; text-decoration: underline; background: rgba(0, 0, 0, .025);} 
+a:hover { color: #000; text-decoration: underline; background: rgba(0, 0, 0, .025);}
 
 ::-moz-selection { background: #0078CF; color: #fff; text-shadow: none; }
-::selection { background: #0078CF; color: #fff; text-shadow: none; }	
+::selection { background: #0078CF; color: #fff; text-shadow: none; }
 
 p{margin: 0 0 1em;}
 p:last-child {margin-bottom: 0;}
@@ -146,7 +146,7 @@ td{vertical-align:top}
 ======	STYLES
 ------------------------------------------------------------- */
 
-/* -- FORMS 
+/* -- FORMS
 ------------------------------------------------------------- */
 form{margin-top: 2em;}
 form li{margin-bottom: 1.5em;}
@@ -184,7 +184,7 @@ label.error { color: #0078CF; margin: 0.5em 0 0 0.5em; font-weight: normal; font
 
 
 
-/* -- BUTTONS 
+/* -- BUTTONS
 ------------------------------------------------------------- */
 .button, input[type="submit"], button, .toggle-title {
 	color: #666;
@@ -195,7 +195,7 @@ label.error { color: #0078CF; margin: 0.5em 0 0 0.5em; font-weight: normal; font
 	border: solid 1px #ddd;
 	text-decoration: none;
 	cursor: pointer;
-	
+
 	background: #efefef; /* Old browsers */
 	background: -moz-linear-gradient(top,  #f6f6f6 0%, #efefef 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f6f6f6), color-stop(100%,#efefef)); /* Chrome,Safari4+ */
@@ -204,14 +204,14 @@ label.error { color: #0078CF; margin: 0.5em 0 0 0.5em; font-weight: normal; font
 	background: -ms-linear-gradient(top,  #f6f6f6 0%,#efefef 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  #f6f6f6 0%,#efefef 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', endColorstr='#efefef',GradientType=0 ); /* IE6-9 */
-		
+
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	-o-border-radius: 2px;
 	-ms-border-radius: 2px;
 	-khtml-border-radius: 2px;
 	border-radius: 2px;
-	
+
 	-webkit-transition: 0.1s linear all;
 	-moz-transition: 0.1s linear all;
 	-ms-transition: 0.1s linear all;
@@ -240,12 +240,12 @@ label.error { color: #0078CF; margin: 0.5em 0 0 0.5em; font-weight: normal; font
 ------------------------------------------------------------- */
 h1,h2,h3,h4,h5,h6{margin:0 0 1em; font-weight: normal;}
 
-h1 {font-size: 4.1em; 
-	letter-spacing: -0.075em; 
-	text-transform: uppercase; 
-	line-height: 0.9; 
+h1 {font-size: 4.1em;
+	letter-spacing: -0.075em;
+	text-transform: uppercase;
+	line-height: 0.9;
 	color: #555;
-	margin: 0 0 0.5em; 
+	margin: 0 0 0.5em;
 	font-weight: normal; }
 h2 { font-size: 2.5em; margin: 0 0 20px; letter-spacing: -0.05em; color: #555; line-height: 1; }
 h3 { font-size: 1.75em; }
@@ -262,14 +262,14 @@ h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover,h6 a:hover{color:#0078CF;
 ------------------------------------------------------------- */
 body{width:100%; background: url(../img/stripes.png) no-repeat 40% 0;}
 .container {width: 90%; margin-top: 1em; margin-left: 5em; margin-right: 5em;/*margin: 5em auto*/; max-width: 1100px; min-width: 300px;}
- 
+
 .grid-wrap {
   margin-left: -3em; /* the same as your gutter */
   overflow: hidden;
   *zoom:1;}
   .grid-wrap:before, .grid-wrap:after{content:""; display:table}
   .grid-wrap:after{clear:both}
-  
+
 .grid {
   float: left;
   padding-left: 3em; /* this is your gutter between columns */
@@ -278,10 +278,10 @@ body{width:100%; background: url(../img/stripes.png) no-repeat 40% 0;}
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   *behavior: url(/js/boxsizing.htc); }
-  
+
 .half-gutter {margin-left: -1.5em; }
   .half-gutter .grid-col {padding-left: 1.5em; }
-  
+
 .col-full {width: 100%; }
 .col-one-half {width: 50%; }
 .col-one-third {width: 33.333%; }
@@ -302,7 +302,9 @@ body{width:100%; background: url(../img/stripes.png) no-repeat 40% 0;}
 
 .fright, .fleft{display:block; overflow:hidden}
 .fright{float:right}
-.fleft{float:left}
+.fleft{float:left;
+    margin-right: 2%;
+}
 
 .alignleft{float: left;clear: left;margin: 0.38em 1.62em 0.38em 0;}
 .alignright {float: right;clear: right;margin: 0.38em 0 0.38em 1.62em;}
@@ -326,13 +328,13 @@ a img:hover {
 	opacity: 0.7;
 	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity = 70);
 	filter: alpha(opacity = 70);}
-    
-    
-    
+
+
+
 /* -------------------------------------------------------------
 ======	PAGES
 ------------------------------------------------------------- */
-    
+
 /* -- HEADER
 ------------------------------------------------------------- */
 header#navtop { /*margin-bottom: 2em*/; clear: both; overflow: hidden; }
@@ -342,14 +344,14 @@ nav a, menu a { text-decoration: none; color: #555; }
 .logo {/*margin-bottom: 3em;*/ }
 .logo:hover {background: none; text-decoration: none;}
 #nameheader { float: left; color:#555; font-size: 5em; }
-		
-		
-/* -- GENERAL 
+
+
+/* -- GENERAL
 ------------------------------------------------------------- */
 .main > section { margin-bottom: 7em; }
 .main header{ color: #555; margin-bottom: 3em; }
 .main header hr{border-top-color:#999;}
-.arrow:after {content:" \27F6"; /* html unicode: &#10230; */ } 
+.arrow:after {content:" \27F6"; /* html unicode: &#10230; */ }
 header .arrow {color: #999; font-style: italic;}
 .arrow:hover {color: #0078CF; }
 
@@ -389,20 +391,20 @@ footer li:last-child { margin-right: 0; padding-right: 0; border-right: none; }
 /* Slider */
 	/* Browser Resets */
 .flex-container a:active,.flexslider a:active,.flex-container a:focus,.flexslider a:focus  {outline: none;}
-.slides,.flex-control-nav,.flex-direction-nav {margin: 0; padding: 0; list-style: none;} 
-	/* FlexSlider Necessary Styles */ 
+.slides,.flex-control-nav,.flex-direction-nav {margin: 0; padding: 0; list-style: none;}
+	/* FlexSlider Necessary Styles */
 .flexslider {margin: 0; padding: 0; position: relative;}
 .flexslider .slides > .slide {display: none; -webkit-backface-visibility: hidden;}
 .flexslider .slides img {width: 100%; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
-.slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;} 
-html[xmlns] .slides {display: block;} 
+.slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;}
+html[xmlns] .slides {display: block;}
 * html .slides {height: 1%;}
 
 .slide figcaption {
 	position: absolute;
-	background: white; 
-	height: auto; min-height: 3em; width: 60%; padding: 1em; 
+	background: white;
+	height: auto; min-height: 3em; width: 60%; padding: 1em;
 	top: 3em; right: 0; }
 .slide figcaption div { text-align: right; display: block; border-right: 1px solid #DDD; padding: 0 2em 0 0; margin: auto 5em auto 0; }
 .slide figcaption div p { margin: 0 }
@@ -416,18 +418,18 @@ html[xmlns] .slides {display: block;}
 
 /* -- WORKS / Home-page and Works-page
 ------------------------------------------------------------- */
-.works figure > a{ 
-	display: block; 
-	height: 100%; width: 100%; 
-	overflow: hidden; 
+.works figure > a{
+	display: block;
+	height: 100%; width: 100%;
+	overflow: hidden;
 	position: relative;
 	border-top: 1px solid #DDD; padding-top: 1em; }
- 	
-.works figure .zoom{ 
-	display: block; 
-	position: absolute; top: 10px; left: 0; 
-	background: url(../img/zoom.png) no-repeat center; 
-	width: 100%; height: 100%; 
+
+.works figure .zoom{
+	display: block;
+	position: absolute; top: 10px; left: 0;
+	background: url(../img/zoom.png) no-repeat center;
+	width: 100%; height: 100%;
 	*zoom: 1;
 	opacity: 0;
 	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity = 0);
@@ -449,7 +451,7 @@ header .thumbtext {color: #999; font-style: italic;}
 .thumbtext:hover {color: #0078CF; }
 
 
-/* -- SUBPAGES 
+/* -- SUBPAGES
 ------------------------------------------------------------- */
 /*Separations*/
 .main:not(.home-page) > section article h2 { margin-top: 1em; padding-top: 1em; border-top: 1px solid #DDD; }
@@ -464,14 +466,14 @@ header .thumbtext {color: #999; font-style: italic;}
 
 
 /* Services-page */
-.warning { 
-	display: block; 
-	background: #F5F5F5; 
-	border: 1px solid #DDD; border-left: none; border-right: none; 
-	text-align: center; 
+.warning {
+	display: block;
+	background: #F5F5F5;
+	border: 1px solid #DDD; border-left: none; border-right: none;
+	text-align: center;
 	padding: 20px; margin: 20px 0px; }
 
-	/* - Toggles */  
+	/* - Toggles */
 .toggle-view > li {
     margin-top: 1em;
     position: relative; }
@@ -499,7 +501,7 @@ header .thumbtext {color: #999; font-style: italic;}
     content: "\2714 ";
     color: #ddd;
     margin-right: 1em; }
-            
+
 	/* - Tabs */
 .tabs {
     display: block;
@@ -509,11 +511,11 @@ header .thumbtext {color: #999; font-style: italic;}
 .tabs li {
     display: inline-block; margin-bottom: -1px; }
 .tabs li a {
-    display: block; 
+    display: block;
     text-decoration: none;
     line-height: 3em;
-    color: #555; 
-    padding: 0 2em; 
+    color: #555;
+    padding: 0 2em;
     margin: 0;
     background: #f5f5f5;
     font-size: 1.1em;}
@@ -558,8 +560,8 @@ header .thumbtext {color: #999; font-style: italic;}
 .blog-sidebar .widget:last-child{border-bottom: none;}
 .blog-sidebar a {font-weight: normal; color:inherit;text-decoration: none; }
 .blog-sidebar a:hover{color:#333;}
-.blog-sidebar li{padding-left: 1em; margin-bottom: 0.5em;  white-space: nowrap ; text-overflow: ellipsis; width: 95%; overflow: hidden; display: block;} 
-.blog-sidebar li a:before {content: ">"; padding-right: 1em;} 
+.blog-sidebar li{padding-left: 1em; margin-bottom: 0.5em;  white-space: nowrap ; text-overflow: ellipsis; width: 95%; overflow: hidden; display: block;}
+.blog-sidebar li a:before {content: ">"; padding-right: 1em;}
 .blog-sidebar input {width: 90%; padding-right: 0;}
 
 /* Pagination */
@@ -592,7 +594,7 @@ ul.page-numbers{float: right;overflow:hidden; display:block;}
 /* -------------------------------------------------------------
 ======	IE Fix
 ------------------------------------------------------------- */
-.lt-ie9 .works figure a, .lt-ie9 .works figure a img { filter:inherit} 
+.lt-ie9 .works figure a, .lt-ie9 .works figure a img { filter:inherit}
 /* jquery filter opacity issue IE8 */
 
 .lt-ie9 .container {min-width: 780px;}
@@ -627,9 +629,9 @@ ul.page-numbers{float: right;overflow:hidden; display:block;}
 	/**/
 	h1{font-size: 3.1em;}
 	.slide figcaption{ width: 80%;}
-	footer li { float: left; margin-right: 0.5em; padding-right: 0.5em; border-right: 1px solid #DDD;} 
+	footer li { float: left; margin-right: 0.5em; padding-right: 0.5em; border-right: 1px solid #DDD;}
 }
-    
+
 /* -- Media query 2 (mq2)
 ------------------------------------------------------------- */
 @media only screen and (max-width: 48em) { /* 13 / 624 */
@@ -645,7 +647,7 @@ ul.page-numbers{float: right;overflow:hidden; display:block;}
 	header nav ul li { float: left;  padding: 0 1em ; border-left:1px solid #ddd; }
 	.slider { margin-top: 3em; }
 }
-    
+
 /* -- Media query 3 (mq3)
 ------------------------------------------------------------- */
 @media only screen and (max-width: 30em) { /* 13 / 390 */
@@ -654,17 +656,17 @@ ul.page-numbers{float: right;overflow:hidden; display:block;}
 	.mq3-col-one-third { width: 33.333%; }
 	.mq3-col-two-thirds { width: 66.666%; }
 	.mq3-col-one-quarter { width: 25%; }
-	.mq3-col-three-quarters { width: 75%; } 
+	.mq3-col-three-quarters { width: 75%; }
 	.mq3-none {display: none;}
 	/**/
 	header nav ul li { padding: 0 0.5em ; }
 	footer li { float: none; margin-right: 0em; padding-right: 0em; border-right: none; line-height: 2em;}
-	.services article {	margin-top: 3em;} .services article:first-of-type {	margin-top: 0;}	
+	.services article {	margin-top: 3em;} .services article:first-of-type {	margin-top: 0;}
 }
 
-/* -- PRINT STYLES 
+/* -- PRINT STYLES
 ------------------------------------------------------------- */
-@media print{ 
+@media print{
 	*{background:transparent !important; color:black !important; text-shadow:none !important; filter:none !important; -ms-filter:none !important}
 	abbr[title]:after{content:"("attr(title) ")"}
 	pre, blockquote{page-break-inside:avoid}
@@ -672,9 +674,9 @@ ul.page-numbers{float: right;overflow:hidden; display:block;}
 	tr, img{page-break-inside:avoid}
 	img{max-width:100% !important}
 	p, h2, h3{orphans:3; widows:3}
-	h2, h3{page-break-after:avoid} 
+	h2, h3{page-break-after:avoid}
 }
- 
+
 /* Social button movement
 ------------------------------------------------------------- */
 
@@ -752,8 +754,8 @@ ul.page-numbers{float: right;overflow:hidden; display:block;}
 #bar-chart5{
     height: 30%;
 }
- 
- 
+
+
 /* -------------------------------------------------------------
 ======	END
-------------------------------------------------------------- 
+-------------------------------------------------------------
