--- a/css/style.css
+++ b/css/style.css
@@ -543,11 +543,17 @@ header .thumbtext {color: #999; font-style: italic;}
 
 /*.wedding_img {max-height: 250px; max-width: 200px;}*/
 .weddingSeal {
-    display: block;
+    /*display: block;
     margin-left: auto;
     margin-right: auto;
-    max-height: 150px;
-    max-width: 150px;}
+    150*/
+    max-height: 10em;
+    max-width: 10em;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 /* -------------------------------------------------------------
 ======	BLOG
